mutt (1.5.18-3) unstable; urgency=low

  * Pull patch from upstream to fix multipart decoding. (Closes: #489283)
  * Add example sidebar config, thanks Stefano Zacchiroli. (Closes: #460452)
  * (Finally) compile with native Kerberos GSSAPI support. (Closes: #469483)

 -- Christoph Berg <myon@debian.org>  Sun, 20 Jul 2008 01:06:46 +0200

mutt (1.5.18-2) unstable; urgency=low

  * Updated sidebar patch, does not display (NULL) anymore. (Closes: #483151)
  * Install reportbug script to inform us about the status of installed
    mutt packages.
  * Use dh_lintian (prefix with '-' so we do not need to bump the DH level).
  * Register mutt as message/rfc822 application in /etc/mailcap.
    (Closes: #474539)
  * Refresh some patches to get rid of -p0 in series file.
  * Bump Standards-Version; add debian/README.source.
  * Switch Maintainer and Uploader as suggested by Dato.

 -- Christoph Berg <myon@debian.org>  Thu, 12 Jun 2008 23:53:46 +0200

mutt (1.5.18-1) unstable; urgency=low

  * New upstream version.
    + Query menu format is configurable. (Closes: #66096, Mutt: #170)
    + Quote attachment filenames starting with '='.
      (Closes: #351890, Mutt: #1719)
    + Mention that References: and Date: cannot be changed in editor.
      (Closes: #191850, Mutt: #1234).
  * Refreshing patches from upstream:
    + compressed-folders.
    + sidebar. (Closes: #470657)
  * Update doc-base section.

 -- Christoph Berg <myon@debian.org>  Sat, 24 May 2008 19:36:44 +0200

mutt (1.5.17+20080114-1) unstable; urgency=low

  * New upstream snapshot (hg 130aa0517251), and this time build a proper
    orig.tar.gz tarball.
    + Fixes message corruption/duplication. (Closes: #459739)

 -- Christoph Berg <myon@debian.org>  Mon, 14 Jan 2008 23:26:14 +0100

mutt (1.5.17-2) unstable; urgency=low

  * Build a mutt-patched package to apply the sidebar patch. Thanks to Dato
    who had the right idea for the necessary debian/rules magic during the